--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
       <div class="container">
         <ul class="social-list">
           <li>
-            <a href="https://www.facebook.com/DrogRada/?locale=uk_UA" class="social-link">
+            <a href="https://www.facebook.com/drohobych.citysite/?locale=uk_UA" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li>
-            <a href="https://www.youtube.com/channel/UCbwirQ4_FtpkH7-lPqe85YA" class="social-link">
+            <a href="https://www.youtube.com/watch?v=3XatwhR4ass" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
@@ -99,9 +99,6 @@
             </li>
           </ul>
         </nav>
-        <a href="vhid.html">
-          <button class="btn btn-primary">Увійти</button>
-        </a>
       </div>
     </div>
   </header>
@@ -116,37 +113,6 @@
           <p class="hero-text">
             Дізнайся більше про місто Дрогобич – його історію, культуру та основні пам'ятки.
           </p>
-          <div class="btn-group">
-            <button class="btn btn-primary">Увійти</button>
-            <button class="btn btn-secondary">Зареєструватися</button>
-          </div>
-        </div>
-      </section>
-      <!-- 
-        - #TOUR SEARCH
-      -->
-      <section class="tour-search">
-        <div class="container">
-          <form action="" class="tour-search-form">
-            <div class="input-wrapper">
-              <label for="destination" class="input-label">Місце призначення*</label>
-              <input type="text" name="destination" id="destination" required placeholder="Enter Destination"
-                class="input-field">
-            </div>
-            <div class="input-wrapper">
-              <label for="people" class="input-label">Кількість пасажирів*</label>
-              <input type="number" name="people" id="people" required placeholder="No.of People" class="input-field">
-            </div>
-            <div class="input-wrapper">
-              <label for="checkin" class="input-label">Дата заїзду**</label>
-              <input type="date" name="checkin" id="checkin" required class="input-field">
-            </div>
-            <div class="input-wrapper">
-              <label for="checkout" class="input-label">Дата виїзду*</label>
-              <input type="date" name="checkout" id="checkout" required class="input-field">
-            </div>
-            <button type="submit" class="btn btn-secondary">Записатися зараз</button>
-          </form>
         </div>
       </section>
       <!-- 
@@ -1044,12 +1010,31 @@
               захоплюючі історії та місця, що надихають."
             </p>
           </div>
-          <button class="btn btn-secondary">Зв'язатися з нами </button>
-        </div>
+          <ul style="list-style-type: none; padding-left: 0; font-size: 14px; color: white;">
+            <li>
+              📺 <a href="https://www.youtube.com/watch?v=3XatwhR4ass" target="_blank" style="color: white; text-decoration: underline;">
+                Коротке відео про місто
+              </a>
+            </li>
+            <li>
+              🗺️ <a href="https://www.karpaty.info/ua/uk/lv/dr/drogobych/infocentre/" target="_blank" style="color: white; text-decoration: underline;">
+                Туристичний центр — Карпати.інфо
+              </a>
+            </li>
+            <li>
+              📌 <a href="https://list.in.ua/111220/%D0%A2%D1%83%D1%80%D0%B8%D1%81%D1%82%D0%B8%D1%87%D0%BD%D0%BE-%D1%96%D0%BD%D1%84%D0%BE%D1%80%D0%BC%D0%B0%D1%86%D1%96%D0%B9%D0%BD%D0%B8%D0%B9-%D1%86%D0%B5%D0%BD%D1%82%D1%80-%D0%BC%D1%96%D1%81%D1%82%D0%B0-%D0%94%D1%80%D0%BE%D0%B3%D0%BE%D0%B1%D0%B8%D1%87%D0%B0-%D0%94%D1%80%D0%BE%D0%B3%D0%BE%D0%B1%D0%B8%D1%87" target="_blank" style="color: white; text-decoration: underline;">
+                Турцентр Дрогобича — List.in.ua
+              </a>
+            </li>
+            <li>
+              📷 <a href="https://www.instagram.com/tourist_information_center.dro/" target="_blank" style="color: white; text-decoration: underline;">
+                Instagram: Tourist Info Center Drohobych
+              </a>
+            </li>
+          </ul>          
       </section>
     </article>
   </main>
-
   <!-- 
     - #FOOTER
   -->
