--- a/getman.html
+++ b/getman.html
@@ -52,12 +52,12 @@
             <div class="container">
                 <ul class="social-list">
                     <li>
-                        <a href="https://www.facebook.com/DrogRada/?locale=uk_UA" class="social-link">
+                        <a href="https://www.facebook.com/drohobych.citysite/?locale=uk_UA" class="social-link">
                             <ion-icon name="logo-facebook"></ion-icon>
                         </a>
                     </li>
                     <li>
-                        <a href="https://www.youtube.com/channel/UCbwirQ4_FtpkH7-lPqe85YA" class="social-link">
+                        <a href="https://www.youtube.com/watch?v=3XatwhR4ass" class="social-link">
                             <ion-icon name="logo-youtube"></ion-icon>
                         </a>
                     </li>
