--- a/Shopping_enters.html
+++ b/Shopping_enters.html
@@ -96,11 +96,11 @@
                         <li>
                             <a href="toeat.html" class="navbar-link" data-nav-link>Де поїсти?</a>
                         </li>
+                        <li>
+                            <a href="hotel.html" class="navbar-link" data-nav-link>Готелі</a>
+                          </li>
                     </ul>
                 </nav>
-                <a href="vhid.html">
-                    <button class="btn btn-primary">Увійти</button>
-                </a>
             </div>
         </div>
     </header>
