--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           </li>
 
           <li>
-            <a href="https://www.youtube.com/watch?v=3XatwhR4ass" class="social-link">
+            <a href="https://www.youtube.com/channel/UCbwirQ4_FtpkH7-lPqe85YA" class="social-link">
               <ion-icon name="logo-youtube"></ion-icon>
             </a>
           </li>
@@ -96,6 +96,9 @@
             </li>
             <li>
               <a href="toeat.html" class="navbar-link" data-nav-link>Де поїсти?</a>
+            </li>
+            <li>
+              <a href="hotel.html" class="navbar-link" data-nav-link>Готелі</a>
             </li>
           </ul>
         </nav>
