--- a/monuments.html
+++ b/monuments.html
@@ -113,7 +113,7 @@
             <br>
             <section class="popular" id="destination">
                 <div class="container">
-                    <h2 class="h2 section-title">Мандрівка мастом кразь його пам'ятники</h2>
+                    <h2 class="h2 section-title">Мандрівка містом крізь його пам'ятники</h2>
                     <p class="section-text">
                         Пам’ятники міста розповідають про його історію, видатних людей та події, що формували його
                         обличчя. Кожна скульптура чи меморіал — це частинка минулого, яку можна побачити та відчути.
